# DOXLE_RUST

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  package-lock.json
assets/: file-handler.js  gallery.js  main.css  output.css  tailwind.css
src/: lib.rs  main.rs  router.rs
src/Components/: file_item.rs  file_types.rs  footer.rs  home.rs  mod.rs  nav.rs
